Bug 1453 - Xserver usage output has wrong spacing for -maxbigreqsize
Summary: Xserver usage output has wrong spacing for -maxbigreqsize
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: git
Hardware: All All
: high minor
Assignee: Roland Mainz
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-09-23 19:06 UTC by Roland Mainz
Modified: 2004-12-07 03:35 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
[FIXED_X11R68x] Patch for 2004-09-24-trunk (3.62 KB, patch)
2004-09-23 19:10 UTC, Roland Mainz
roland.mainz: 6.8-branch+
Details | Splinter Review

Description Roland Mainz 2004-09-23 19:06:53 UTC
Xserver usage output has wrong spacing for -maxbigreqsize since the code uses
TABs where it shouldn't use them.
Comment 1 Roland Mainz 2004-09-23 19:10:15 UTC
Created attachment 964 [details] [review]
[FIXED_X11R68x] Patch for 2004-09-24-trunk
Comment 2 Roland Mainz 2004-09-23 19:12:28 UTC
Patch checked-in...

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.398; previous revision: 1.397
/cvs/xorg/xc/programs/Xserver/os/utils.c,v  <--  utils.c
new revision: 1.8; previous revision: 1.7
Mailing the commit message to xorg-commit@pdx.freedesktop.org...

... marking bug as FIXED.
Comment 3 Roland Mainz 2004-11-04 23:20:50 UTC
Comment on attachment 964 [details] [review]
[FIXED_X11R68x] Patch for 2004-09-24-trunk

Requesting approval for X11R6.8.2: the patch simply corrects the output of
Xserver's usage() function (just a small whitespace change to be exact).
Comment 4 Roland Mainz 2004-11-19 07:32:37 UTC
Comment on attachment 964 [details] [review]
[FIXED_X11R68x] Patch for 2004-09-24-trunk

Approved for the X11R6.8.x branch in the 2004-11-17 release-wranglers phone
call.
Please don't commit it yourself, I'll handle that once the CVS service is
available again.
Comment 5 Roland Mainz 2004-12-07 22:35:25 UTC
Comment on attachment 964 [details] [review]
[FIXED_X11R68x] Patch for 2004-09-24-trunk

Patch checked-in into X11R68x stable branch:

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.365.2.14; previous revision: 1.365.2.13
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/programs/Xserver/os/utils.c,v  <--  utils.c
new revision: 1.6.2.3; previous revision: 1.6.2.2
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.