//bugs.freedesktop.org/show_bug.cgi?id=1453) attachment #964     (https://bugs.freedesktop.org/attachment.cgi?id=964): Fix spaces in     usage output for BIGREQUESTS extension (option "-maxbigreqsize").